--- a/assignment_2/requirements.txt
+++ b/assignment_2/requirements.txt
@@ -1,12 +1,16 @@
+category_encoders==2.8.1
 contourpy==1.3.1
 cycler==0.12.1
 fonttools==4.57.0
+imbalanced-learn==0.13.0
+imblearn==0.0
 joblib==1.4.2
 kiwisolver==1.4.8
 matplotlib==3.10.1
 numpy==2.2.4
 packaging==24.2
 pandas==2.2.3
+patsy==1.0.1
 pillow==11.1.0
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
@@ -15,5 +19,8 @@ scikit-learn==1.6.1
 scipy==1.15.2
 seaborn==0.13.2
 six==1.17.0
+sklearn-compat==0.1.3
+statsmodels==0.14.4
 threadpoolctl==3.6.0
 tzdata==2025.2
+xlrd==2.0.1
